# Compression_public

./: CMakeLists.txt  PROSE.md  README.md  main.cpp
docs/drawio/: Activity diagram Huffman.drawio  Alphabetically ordered single frequencies.drawio  Overview.drawio
include/: compression_handler.h  file_handler.h  huff.h  lzw.h
src/: compression_handler.cpp  file_handler.cpp  huff.cpp  lzw.cpp
test_txt/: alice_in_wonderland.piph  alice_in_wonderland.piphf  alice_in_wonderland.pipl  jane_eyre.piph  jane_eyre.piphf  jane_eyre.pipl  jane_eyre.txt  jane_eyre_decompressed_l.txt  lzw_best.piph  lzw_best.piphf  lzw_best.pipl  lzw_best.txt  lzw_best_decompressed_l.txt  lzw_worst.piph  lzw_worst.piphf  lzw_worst.txt  macbeth.piph  macbeth.piphf  macbeth.pipl  test.piph  test.piphf  test.pipl  test_decompressed_h.txt  test_decompressed_l.txt  wuthering_heights.piph  wuthering_heights.piphf  wuthering_heights.pipl  wuthering_heights.txt  wuthering_heights_decompressed_l.txt
